SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements: 


New Plugin: Smarttools by Michael Romankiewicz
  - Searching for tables that do not have a primary key or unique index or index.
  - Searching for non nullable columns that contain null values. Some DBs e.g. Firebird can be tricked to have this inconsistency.
  - Changing values database wide according to specified criteria.
  For more information see the Plugin's help.


New Plugin: Firebird Manager by Michael Romankiewicz
  - Storing and restoring Firebird DBs
  - Managing users and roles for the Firebird RDBMS
  For more information see the Plugin's help.

 - Aliases can be displayed as list or as tree.

 - A new preference for choosing Locale is available in Global Preferences -> General tab.  This allows you to
   set your preferred locale, and if an optional translation is installed that corresponds with the preferred
   locale, then restart and the changes take effect.(No longer necessary to hand edit the start script)

 - Copy as "SQL WHERE" / "UPDATE-SET" / "INSERT-VALUES" statement function in tables
   Tables offer right mouse menu to copy WHERE, UPDATE-SET or INSERT-VALUES clauses of selected data to clip board.
   Works like the exisiting "Copy as SQL IN statment" function.

 - New Plugin: SQLReplace by Dieter Engelhardt
   This plugin replaces a set of variables before a statement is executed.
   The variables to replace can be defined at the Plugin's Global Preferences tab.  

 - Added a preference option to allow the selection of items in lists to change while activating
   the popup menu on a single right-mouse button click.  For example, without this, you need to 
   select an object in the tree with a left mouse button click, then press the right mouse button 